@@ -10,6 +10,7 @@
     <div class="container">
         <h2 class="turn"></h2>
         <div class="board"></div>
+        <div class="tracker"></div>
         <h1 class="winner"></h1>
         <div class="alerts"></div>
         <div class="finished"></div>
